--- a/index.html
+++ b/index.html
@@ -2,26 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Knight Rider</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/assets/images/logo.png" />
+
+    <style></style>
   </head>
   <body>
-    <section id="kit">
-      <section id="light-panel">
-        <div class="light"></div>
-        <div class="light"></div>
-        <div class="light"></div>
-        <div class="light"></div>
-        <div class="light"></div>
-        <div class="light"></div>
-      </section>
+    <p>JavaScript Knight Rider</p>
 
-      <section id="button-panel">
-        <button class="start">Start</button>
-        <button class="stop">Stop</button>
-      </section>
-    </section>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <div class="line"></div>
+
+    <div class="container">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
+
+    <div class="line"></div>
+
+    <div class="button-container">
+      <button id="startBtn">Start</button>
+      <button id="stopBtn">Stop</button>
+    </div>
+
     <script src="/script.js"></script>
   </body>
 </html>
